# pingora-gateway

./: .gitignore  .gitmodules  Cargo.toml  README.md
api/: Cargo.toml
api/src/: labels.rs  spec.rs
config/crd/: gateway.yaml
config/gateway/: deployment–template.yaml
error/: Cargo.toml
error/src/: lib.rs
example/: gateway.yaml
gateway/: Cargo.toml
manager/: Cargo.toml
manager/src/: lib.rs  main.rs
manager/src/api/: labels.rs  mod.rs  spec.rs
manager/src/gateway/: mod.rs
xds/: Cargo.toml
