[package]
name = "api"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
error = { path = "../error" }
async-trait = { version = "0.1.83" }
lazy_static = "1.5.0"
tracing = "0.1.37"
kube = { workspace = true, features = ["runtime", "derive", "client"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
k8s-openapi = { workspace = true, features = ["v1_31", "schemars"] }
once_cell = "1.20.2"
