[package]
name = "manager"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["v1_26"] }
tokio = { workspace = true, features = ["full"] }
snafu = { workspace = true }
gateway-api = { workspace = true }
futures = { workspace = true }
error = { path = "../error" }
async-trait = { version = "0.1.83" }
