[package]
name = "manager"
version = "0.1.0"
edition = { workspace = true }

[[bin]]
doc = false
name = "manager"
path = "src/main.rs"

[dependencies]
kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true, features = ["v1_31", "schemars"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
snafu = { workspace = true }
gateway-api = { workspace = true }
futures = { workspace = true }
error = { path = "../error" }
api = { path = "../api" }
async-trait = { version = "0.1.83" }
lazy_static = "1.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3"
bon = "3.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
